--- a/static/borrar.html
+++ b/static/borrar.html
@@ -7,7 +7,8 @@
     <!-- Agrega el enlace a Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/styles.css">
-    <script src="/static/js/borrar.js"></script> 
+    <script src="/static/js/borrar.js"></script>
+    <script src="/static/js/listar.js"></script> 
 </head>
 <body>
     <div class="container mt-5">
