--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,8 @@
     <!-- Agrega el enlace a Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/styles.css">
-    <script src="/static/js/listar.js"></script>    
+    <script src="/static/js/listar.js"></script>  
+    <script src="/static/js/get_all.js"></script>   
 </head>
 <body>
     <div class="container">
@@ -19,7 +20,6 @@
             <tbody id="lista-contactos"></tbody>
         </table>
 
-        <!-- Agrega clases de Bootstrap a los botones -->
         <a href="/static/agregar.html" class="btn btn-primary me-2">Agregar Contacto</a>
         <a href="/static/actualizar.html" class="btn btn-warning me-2">Actualizar Contacto</a>
         <a href="/static/buscar.html" class="btn btn-info me-2">Buscar Contacto</a>
@@ -28,6 +28,9 @@
 
     <!-- Agrega el enlace a Bootstrap JS y Popper.js (necesario para algunos componentes de Bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.body.onload = getAll();
+    </script>
 </body>
 </html>
 
